--- a/bhoma/xforms/bhoma_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_pregnancy.xhtml
@@ -195,7 +195,7 @@
 	<hint> Enter weight in Kilograms</hint>
   </input>
 
-  <input ref="fetal_heart_rate" appearance="unit: rate/min;">
+  <input ref="fetal_heart_rate" appearance="unit: b/min;">
     <label>Enter Fetal Heart Rate</label>
 	<hint> Record the fetal heart rate in beats per minute.</hint>
   </input>
@@ -225,7 +225,7 @@
     <item><label>Vaginal Bleeding</label><value>bleeding</value></item>    
     <item><label>Draining</label><value>draining</value></item>    
     <item><label>Contractions</label><value>contract</value></item>    
-    <item><label>Pain Urinating</label><value>pain_urinating</value></item>     
+    <item><label>Pain Urination</label><value>pain_urinating</value></item>     
     <item><label>Oedema</label><value>oedema</value></item>
     <item><label>Low Fetal Movement</label><value>low_movement</value></item>   
 	<item><label>No Danger Signs</label><value>none</value></item>
@@ -234,7 +234,7 @@
   </select>
   
   <select1 ref="urinalysis_protein">
-    <label>Select Urinalysis Protein &gt; 2+</label>
+    <label>Select Urinalysis Protein &#x2265; 2+</label>
     <item><label>Positive</label><value>p</value></item>
     <item><label>Negative</label><value>n</value></item>
 	<item><label>Not Done</label><value>nd</value></item>
