--- a/bhoma/xforms/bhoma_sick_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_sick_pregnancy.xhtml
@@ -165,7 +165,7 @@
     <bind nodeset="investigations/hiv_rapid" required="true()" relevant="selected(../categories, 'hiv_rapid')" />
 	<bind nodeset="investigations/hgb_hct_possible" required="true()" relevant="selected(../categories, 'hgb_hct')"/>
     <bind nodeset="investigations/hgb" type="decimal" constraint=". &lt;= 25" jr:constraintMsg="Hgb should be less than 25 (g/dL)" relevant="selected(../hgb_hct_possible, 'have_results')" />
-    <bind nodeset="investigations/hct" type="int" constraint=". &lt;= 60" jr:constraintMsg="Hct should be less than 100%" relevant="selected(../hgb_hct_possible, 'have_results')" />
+    <bind nodeset="investigations/hct" type="int" constraint=". &lt;= 60" jr:constraintMsg="Hct should be less than 60%" relevant="selected(../hgb_hct_possible, 'have_results')" />
 	<bind nodeset="investigations/urine_possible" required="true()" relevant="selected(../categories, 'urine')"/>
     <bind nodeset="investigations/urine" required="true()" relevant="selected(../urine_possible, 'have_results')" constraint="not(selected(., 'blank') and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'Question Left Blank' and another answer" />
     <bind nodeset="investigations/rpr" required="true()" relevant="selected(../categories, 'rpr')" />
@@ -262,7 +262,7 @@
   </input>
 	
   <input ref="vitals/heart_rate" appearance="unit: rate/min;">
-    <label>Enter Heart Rate</label>
+    <label>Enter Maternal Heart Rate</label>
 	<hint> Heart rate should be measured during a complete minute and recorded on the form as beats per minute </hint>
   </input>
   
@@ -278,7 +278,7 @@
   <select ref="danger_signs" appearance="as-select1: 10, 11;">
     <label>Select Any Danger Signs Present</label>
 	<item><label>Heavy Vaginal Bleeding</label><value>sev_vag_bleeding</value></item>
-    <item><label>Labor &gt; 24 hrs</label><value>long_labor</value></item>
+    <item><label>Labour &gt; 24 hrs</label><value>long_labor</value></item>
 	<item><label>Convulsions</label><value>convulsion</value></item>
     <item><label>Fever &gt; 38&#xb0;C</label><value>fever</value></item>
 	<item><label>Severe Pallor</label><value>sev_pallor</value></item>
@@ -311,7 +311,7 @@
     <item><label>Seizures (past)</label><value>seizures</value></item>
     <item><label>TB</label><value>tb</value></item>
 	<item><label>STI</label><value>sti</value></item>
-	<item><label>Other Illnesses (&gt; 2 wks)</label><value>other</value></item>
+	<item><label>Other Illnesses (&lt; 2 wks)</label><value>other</value></item>
 	<item><label>No Past Medical History</label><value>none</value></item>
 	<item><label>Section Left Blank</label><value>blank</value></item>
 	<hint> This includes all conditions that the patient has previously had </hint>
@@ -373,7 +373,7 @@
   <select1 ref="investigations/hiv_rapid">
     <label>Result of HIV Rapid Test</label>
 	<item><label>Test Result: REACTIVE</label><value>r</value></item>
-    <item><label>Test Result: NON REACTIVE</label><value>nr</value></item>
+    <item><label>Test Result: NON-REACTIVE</label><value>nr</value></item>
 	<item><label>Test Result: INDETERMINATE</label><value>ind</value></item>
     <item><label>Test Not Done</label><value>not_done</value></item>
 	<item><label>Test Not Available</label><value>not_avail</value></item>
@@ -389,11 +389,11 @@
   </select1>
   
   <input ref="investigations/hgb" appearance="unit: g/dL;">
-    <label>Enter Hgb</label>
+    <label>Enter Hgb Result</label>
   </input>
 
   <input ref="investigations/hct" appearance="unit: %;">
-    <label>Enter Hct</label>
+    <label>Enter Hct Result</label>
   </input>
 
   <select1 ref="investigations/urine_possible">
@@ -417,7 +417,7 @@
   <select1 ref="investigations/rpr">
     <label>Result of RPR Test</label>
 	<item><label>Test Result: REACTIVE</label><value>r</value></item>
-    <item><label>Test Result: NON REACTIVE</label><value>nr</value></item>
+    <item><label>Test Result: NON-REACTIVE</label><value>nr</value></item>
     <item><label>Test Not Done</label><value>not_done</value></item>
 	<item><label>Test Not Available</label><value>not_avail</value></item>
 	<item><label>Question Left Blank</label><value>blank</value></item>
@@ -513,11 +513,11 @@
     <item><label>SEVERE: RR &#x2265; 20</label><value>sev_rr</value></item>
     <item><label>SEVERE: mat HR &#x2265; 100 bpm</label><value>sev_hr</value></item>
     <item><label>SEVERE: temp &#x2265; 38&#xb0;C</label><value>sev_temp</value></item>
-    <item><label>SEVERE: GA &#x2265; 34 wks, ROM &#x2265; 24h</label><value>sev_ga_rom</value></item>
-    <item><label>SEVERE: GA 28-34 weeks</label><value>sev_ga</value></item>
+    <item><label>SEVERE: &#x2265; 34 wks, ROM &#x2265; 24hrs</label><value>sev_ga_rom</value></item>
+    <item><label>SEVERE: 28-34 weeks</label><value>sev_ga</value></item>
     <item><label>SEVERE: abd pain/tenderness</label><value>sev_abd_pain</value></item>
     <item><label>SEVERE: foul vaginal discharge</label><value>sev_foul_vag_discharge</value></item>
-    <item><label>MODERATE: GA &#x2265; 34 wks, in labour</label><value>mod_ga</value></item>
+    <item><label>MODERATE: &#x2265; 34 wks, in labour</label><value>mod_ga</value></item>
 	<item><label>Section Left Blank</label><value>blank</value></item>
   </select>
 
@@ -697,6 +697,7 @@
 	
 	<select1 ref="uncommon/drug_choices_two">
 		<label>Select Drug as Prescribed (D through H)</label>
+		<item><label>(d4T + 3TC + NVP) Stavdn/Lmvdn/Nvrpn</label><value>stavudine_lamivudine_nevirapin</value></item>
 		<item><label>Depo Provera</label><value>depo_provera</value></item>
 		<item><label>Dextrose</label><value>dextrose</value></item>
 		<item><label>Diazepam (Valium)</label><value>diazepam</value></item>
@@ -768,7 +769,6 @@
 		<item><label>Salbutamol (Ventolin)</label><value>salbutamol</value></item>
 		<item><label>Slphdxn/Prmthmn (Fansidar)</label><value>sulphadoxine_pyrimethamine_fan</value></item>
 		<item><label>Sodium Chloride (Saline)</label><value>sodium_chloride</value></item>
-		<item><label>Stavdn/Lmvdn/Nvrpn (d4T + 3TC + NVP)</label><value>stavudine_lamivudine_nevirapin</value></item>
 		<item><label>Stavdn/Lmvdn/Nvrpn (d4T + 3TC + NVP)</label><value>stavudine_lamivudine_nevirapin</value></item>
 		<item><label>Stavudine (d4T)</label><value>stavudine</value></item>
 		<item><label>Stavudine/Lamivudine (d4T + 3TC )</label><value>stavudine_lamivudine</value></item>
@@ -857,8 +857,8 @@
 		<item><label>Amoxycillin (Amoxyl), 125 mg/5 ml, syrup, TDS x 3 days</label><value>amoxycillin-syrup-125-3-5</value></item>
 		<item><label>Amoxycillin (Amoxyl), 250 mg, tablet, TDS x 3 days</label><value>amoxycillin-tablet-250-3-5</value></item>
 		<item><label>Amoxycillin (Amoxyl), 500 mg, tablet, TDS x 3 days</label><value>amoxycillin-tablet-500-3-5</value></item>
-		<item><label>Artemether lumefantrine (Co.Artem), 1 tablet (20/120 mg), tablet, BD x 3 days</label><value>artemether_lumefantrine_co_art-tablet-1-2-3</value></item>
-		<item><label>Artemether lumefantrine (Co.Artem), 4 tablets (80/480 mg), tablet, BD x 3 days</label><value>artemether_lumefantrine_co_art-tablet-4-2-3</value></item>
+		<item><label>Artmthr Lmfntrn (Co.Artem), 1 tab (20/120mg), tablet, BD x 3 days</label><value>artemether_lumefantrine_co_art-tablet-1-2-3</value></item>
+		<item><label>Artmthr Lmfntrn (Co.Artem), 4 tabs (80/480mg), tablet, BD x 3 days</label><value>artemether_lumefantrine_co_art-tablet-4-2-3</value></item>
 		<item><label>Chlorpheniramine (Piriton), 1 mg, tablet, BD x 3 days</label><value>chlorpheniramine-tablet-1-2-3</value></item>
 		<item><label>Chlorpheniramine (Piriton), 2 mg, tablet, BD x 3 days</label><value>chlorpheniramine-tablet-2-2-3</value></item>
 		<item><label>Chlorpheniramine (Piriton), 4 mg, tablet, BD x 3 days</label><value>chlorpheniramine-tablet-4-2-3</value></item>
@@ -930,6 +930,7 @@
 	
 	<select1 ref="uncommon/drug_choices_two">
 		<label>Select Drug as Prescribed (D through H)</label>
+		<item><label>(d4T + 3TC + NVP) Stavdn/Lmvdn/Nvrpn</label><value>stavudine_lamivudine_nevirapin</value></item>
 		<item><label>Depo Provera</label><value>depo_provera</value></item>
 		<item><label>Dextrose</label><value>dextrose</value></item>
 		<item><label>Diazepam (Valium)</label><value>diazepam</value></item>
@@ -1001,7 +1002,6 @@
 		<item><label>Salbutamol (Ventolin)</label><value>salbutamol</value></item>
 		<item><label>Slphdxn/Prmthmn (Fansidar)</label><value>sulphadoxine_pyrimethamine_fan</value></item>
 		<item><label>Sodium Chloride (Saline)</label><value>sodium_chloride</value></item>
-		<item><label>Stavdn/Lmvdn/Nvrpn (d4T + 3TC + NVP)</label><value>stavudine_lamivudine_nevirapin</value></item>
 		<item><label>Stavdn/Lmvdn/Nvrpn (d4T + 3TC + NVP)</label><value>stavudine_lamivudine_nevirapin</value></item>
 		<item><label>Stavudine (d4T)</label><value>stavudine</value></item>
 		<item><label>Stavudine/Lamivudine (d4T + 3TC )</label><value>stavudine_lamivudine</value></item>
