accept and process old 7-digit referral #s

--- a/bhoma/xforms/bhoma_general.xhtml
+++ b/bhoma/xforms/bhoma_general.xhtml
@@ -154,7 +154,7 @@
     <bind nodeset="case/followup_date" type="int" calculate="../../followup_days"/>
     
     <bind nodeset="encounter_type" required="true()" />
-    <bind nodeset="chw_referral_id" relevant="../encounter_type = 'new_case'" />
+    <bind nodeset="chw_referral_id" relevant="../encounter_type = 'new_case'" constraint="regex(., '\d{7,8}')" jr:constraintMsg="CHW Referral ID must be 7 or 8 digits" />
     <bind nodeset="encounter_date" type="date" required="true()" jr:preload="date" jr:preloadParams="today" />
     <bind nodeset="encounter_time"  type="time" />
     <bind nodeset="lmp" type="date" relevant="../gender = 'f'" />
